--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</header>
 
 	<div class="modal">
-		<button class="modal__close"></button>
+		<button class="btn  btn--close"></button>
 		<form action="https://echo.htmlacademy.ru" method="get">
 			<div class="modal__user-block">
 				<label for="name">Ваше имя:</label>
@@ -97,7 +97,7 @@
 				</div>
 				<h2 class="features__title">Веб-сайты</h2>
 				<p class="features__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-				<a class="btn" href="#">Заказать</a>
+				<a class="btn  btn--red" href="#">Заказать</a>
 			</div>
 			<div class="features__block">
 				<div class="features__image">
@@ -105,7 +105,7 @@
 					</div>
 				<h2 class="features__title">Приложения</h2>
 				<p class="features__text">Покорите топ-10 приложений в AppStrore и Google Play</p>
-				<a class="btn" href="#">Заказать</a>
+				<a class="btn  btn--green" href="#">Заказать</a>
 			</div>
 			<div class="features__block">
 				<div class="features__image">
@@ -113,7 +113,7 @@
 				</div>
 				<h2 class="features__title">Презентации</h2>
 				<p class="features__text">Вы даже не подозреваете, насколько вы изумительны!</p>
-				<a class="btn" href="#">Заказать</a>
+				<a class="btn  btn--yellow" href="#">Заказать</a>
 			</div>
 		</div>
 	</div>
@@ -156,11 +156,11 @@
 	<div class="clients">
 		<div class="clients__wrap">
 			<div class="client__block">
-				<a href="#"><img src="img/clients-gluk.png" alt="Glukhanko" width="198" height="37"></a>
+				<a href="http://glukhanko.ru/"><img src="img/clients-gluk.png" alt="Glukhanko" width="198" height="37"></a>
 			</div><div class="client__block">
-				<a href="#"><img src="img/clients-html.png" alt="Html Academy" width="199" height="68"></a>
+				<a href="https://htmlacademy.ru/"><img src="img/clients-html.png" alt="Html Academy" width="199" height="68"></a>
 			</div><div class="client__block">
-				<a href="#"><img src="img/clients-boroda.png" alt="Barbershop Borodinski" width="209" height="90"></a>
+				<a href="https://serj-t.github.io/barber/"><img src="img/clients-boroda.png" alt="Barbershop Borodinski" width="209" height="90"></a>
 			</div>
 		</div>
 	</div>
@@ -179,9 +179,9 @@
 	<footer class="main-footer">
 		<div class="main-footer__wrap">
 			<div class="social">
-				<a class="social__btn" href="#"><i class="icon-vk"></i></a>
-				<a class="social__btn" href="#"><i class="icon-facebook"></i></a>
-				<a class="social__btn" href="#"><i class="icon-instagramm"></i></a>
+				<a class="btn  btn--social" href="#"><i class="icon-vk"></i></a>
+				<a class="btn  btn--social" href="#"><i class="icon-facebook"></i></a>
+				<a class="btn  btn--social" href="#"><i class="icon-instagramm"></i></a>
 			</div>
 			<div class="footer__text">
 				<span>Давайте дружить, это выгодно!</span>
