--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
 			</div>
 			<div class="slider__list">
 				<div class="slider__item">
-					<div class="slide__title">Долго, дорого, скурпулезно.</div>
+					<div class="slide__title">Долго, дорого, скрупулезно.</div>
 					<p class="slide__text">Математически выверенный дизайн<br>
 						для вашего сайта или мобильного приложения.</p>
-					<a class="btn" href="#">Узнать больше</a>
+					<a class="btn  btn--slider" href="#">Узнать больше</a>
 				</div>
 				<div class="slider__item">
 					<div class="slide__title">Любите ли вы математику, как любим ее мы?</div>
 					<p class="slide__text">Нашим дизайнерам мы удаляем нейроны, ответственные
 					за креатив, чтобы дать им возможность все просчитать</p>
-					<a class="btn" href="#">Узнать больше</a>
+					<a class="btn  btn--slider" href="#">Узнать больше</a>
 				</div>
 				<div class="slider__item">
-					<div class="slide__title">Только наркотики, только хардкор!</div>
+					<div class="slide__title">Только наркотики,<br> только хардкор!</div>
 					<p class="slide__text">Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>
-					<a class="btn" href="#">Узнать больше</a>
+					<a class="btn  btn--slider" href="#">Узнать больше</a>
 				</div>
 			</div>
 		</div>
@@ -104,7 +104,7 @@
 						<img src="img/features-app.png" alt="Приложения" width="240" height="124">
 					</div>
 				<h2 class="features__title">Приложения</h2>
-				<p class="features__text">Покорите топ-10 приложений в AppStrore и Google Play</p>
+				<p class="features__text">Покорите топ-10 приложений<br> в AppStrore и Google Play</p>
 				<a class="btn  btn--green" href="#">Заказать</a>
 			</div>
 			<div class="features__block">
@@ -178,7 +178,7 @@
 
 	<footer class="main-footer">
 		<div class="main-footer__wrap">
-			<div class="social">
+			<div class="main-footer__social">
 				<a class="btn  btn--social" href="#"><i class="icon-vk"></i></a>
 				<a class="btn  btn--social" href="#"><i class="icon-facebook"></i></a>
 				<a class="btn  btn--social" href="#"><i class="icon-instagramm"></i></a>
