--- a/catalog.html
+++ b/catalog.html
@@ -42,12 +42,14 @@
 		<h1>Добро пожаловать в магазин готовых макетов</h1>
 	</div>
 
+	<div class="overlay"></div>
+
 	<div class="modal">
-		<button class="btn  btn--close"></button>
+		<button class="modal-close  btn  btn--close  "></button>
 		<form action="https://echo.htmlacademy.ru" method="get">
 			<div class="modal__user-block">
 				<label for="name">Ваше имя:</label>
-				<input type="text" id="name" name="name" placeholder="Представьтесь, пожалуйста" required>
+				<input type="text" id="name" name="name" placeholder="Представьтесь, пожалуйста" required autofocus>
 			</div>
 			<div class="modal__user-block">
 				<label for="email">Ваше e-mail:</label>
@@ -220,7 +222,7 @@
 			<div class="form__feedback">
 				<span>Nёrds design studio</span>
 				<a class="btn" href="tel:+78122757575">+7(812) 275-75-75</a>
-				<a class="btn" href="#">Напишите нам</a>
+				<a class="btn  feedback" href="modal.html">Напишите нам</a>
 			</div>
 		</div>
 	</div>
@@ -238,6 +240,6 @@
 			</div>
 		</div>
 	</footer>
-
+<script src="js/modal.js"></script>
 </body>
 </html>
