--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="дизайн-студия, макеты, лендингы, сайты, мобильные приложения">
 	<link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body >
 
 	<header class="main-header">
 		<div class="main-header__wrap">
@@ -37,25 +37,6 @@
 			</nav>
 		</div>
 	</header>
-
-	<div class="modal">
-		<button class="btn  btn--close"></button>
-		<form action="https://echo.htmlacademy.ru" method="get">
-			<div class="modal__user-block">
-				<label for="name">Ваше имя:</label>
-				<input type="text" id="name" name="name" placeholder="Представьтесь, пожалуйста" required>
-			</div>
-			<div class="modal__user-block">
-				<label for="email">Ваше e-mail:</label>
-				<input type="text" id="email" name="email" placeholder="Для отправки ответа" required>
-			</div>
-			<div class="modal__user-block  test">
-				<label for="textarea">Текст письма:</label>
-				<textarea placeholder="В свободной форме" id="textarea" name="textarea" rows="7" required></textarea>
-			</div>
-			<input type="submit" class="btn  btn--modal">
-		</form>
-	</div>
 
 	<div class="slider">
 		<div class="slider__wrap">
@@ -171,9 +152,30 @@
 			<div class="form__feedback">
 				<span>Nёrds design studio</span>
 				<a class="btn" href="tel:+78122757575">+7(812) 275-75-75</a>
-				<a class="btn" href="#">Напишите нам</a>
+				<a class="btn  feedback" href="modal.html">Напишите нам</a>
 			</div>
 		</div>
+	</div>
+
+	<div class="overlay"></div>
+
+	<div class="modal">
+		<button class="modal-close  btn  btn--close  "></button>
+		<form action="https://echo.htmlacademy.ru" method="get">
+			<div class="modal__user-block">
+				<label for="name">Ваше имя:</label>
+				<input type="text" id="name" name="name" placeholder="Представьтесь, пожалуйста" required autofocus>
+			</div>
+			<div class="modal__user-block">
+				<label for="email">Ваше e-mail:</label>
+				<input type="text" id="email" name="email" placeholder="Для отправки ответа" required>
+			</div>
+			<div class="modal__user-block  test">
+				<label for="textarea">Текст письма:</label>
+				<textarea placeholder="В свободной форме" id="textarea" name="textarea" rows="7" required></textarea>
+			</div>
+			<input type="submit" class="btn  btn--modal">
+		</form>
 	</div>
 
 	<footer class="main-footer">
@@ -189,6 +191,6 @@
 			</div>
 		</div>
 	</footer>
-
+<script src="js/modal.js"></script>
 </body>
 </html>
