--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="дизайн-студия, макеты, лендингы, сайты, мобильные приложения">
 	<link href="css/style.css" rel="stylesheet">
 </head>
-<body >
+<body>
 
 	<header class="main-header">
 		<div class="main-header__wrap">
@@ -104,7 +104,7 @@
 			<div class="about__column">
 				<div class="column__left">
 					<h1 class="column__title">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
-					<p class="column__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+					<p class="column__text"> Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
 				</div>
 				<div class="column__right">
 					<img class="column__logo" src="img/logo-big.png" alt="Nerds" width="187" height="75">
@@ -147,10 +147,10 @@
 	</div>
 
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6198884762414!2d30.32160008426557!3d59.938449324695334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JEuINCa0L7QvdGO0YjQtdC90L3QsNGPLCDQtC4gMTkvOA!5e0!3m2!1sru!2sru!4v1478254137541" width="100%" height="416"  style="border:0" allowfullscreen></iframe>
-		<div class="map__wrap"> <!-- ERROR W3C -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6198884762414!2d30.32160008426557!3d59.938449324695334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JEuINCa0L7QvdGO0YjQtdC90L3QsNGPLCDQtC4gMTkvOA!5e0!3m2!1sru!2sru!4v1478254137541" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
+		<div class="map__wrap">
 			<div class="form__feedback">
-				<span>Nёrds design studio</span>
+				<span>Nёrds design studio Nёrds design studio Nёrds</span>
 				<a class="btn" href="tel:+78122757575">+7(812) 275-75-75</a>
 				<a class="btn  feedback" href="modal.html">Напишите нам</a>
 			</div>
