big BEM LESS audit

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="main-nav__item">
-						<a href="">Студия</a></li>
+						<a href="#">Студия</a></li>
 					<li class="main-nav__item">
-						<a href="">Клиенты</a></li>
+						<a href="#">Клиенты</a></li>
 					<li class="main-nav__item">
 						<a href="catalog.html">Магазин</a>
 					</li>
 					<li class="main-nav__item">
-						<a href="">Контакты</a>
+						<a href="#">Контакты</a>
 					</li>
 				</ul>
 				<div class="user-block">
@@ -102,29 +102,29 @@
 	<div class="about">
 		<div class="about__wrap">
 			<div class="about__column">
-				<div class="column__left">
-					<h1 class="column__title">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
-					<p class="column__text"> Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
+				<div class="about__column-left">
+					<h1 class="about__column-title">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
+					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
 				</div>
-				<div class="column__right">
-					<img class="column__logo" src="img/logo-big.png" alt="Nerds" width="187" height="75">
-					<div class="logo__sign">
+				<div class="about__column-right">
+					<img class="about__logo" src="img/logo-big.png" alt="Nerds" width="187" height="75">
+					<div class="about__logo-sign">
 						<span>Since 2004</span>
 					</div>
 				</div>
 			</div>
 			<div class="about__column">
-				<div class="column__left">
-					<h3 class="column__title  column__title--upper">Выполняем заказы на разработку:</h3>
-					<ul class="column__list">
+				<div class="about__column-left">
+					<h3 class="about__column-title  about__column-title--upper">Выполняем заказы на разработку:</h3>
+					<ul class="about__column-list">
 						<li>Веб-сайтов любой сложности</li>
 						<li>Мобильных приложений для iOS и Android</li>
 						<li>Слайдшоу и видео для корпоративных презентаций</li>
 					</ul>
 				</div>
-				<div class="column__right">
+				<div class="about__column-right">
 					<h3 class="column__title  column__title--upper">Как мы работаем</h3>
-					<ul class="column__list">
+					<ul class="about__column-list">
 						<li>С самоотдачей 146%</li>
 						<li>Соблюдая сроки на 100%</li>
 						<li>По предоплате 50%</li>
@@ -136,11 +136,11 @@
 
 	<div class="clients">
 		<div class="clients__wrap">
-			<div class="client__block">
+			<div class="clients__block">
 				<a href="http://glukhanko.ru/"><img src="img/clients-gluk.png" alt="Glukhanko" width="198" height="37"></a>
-			</div><div class="client__block">
+			</div><div class="clients__block">
 				<a href="https://htmlacademy.ru/"><img src="img/clients-html.png" alt="Html Academy" width="199" height="68"></a>
-			</div><div class="client__block">
+			</div><div class="clients__block">
 				<a href="https://serj-t.github.io/barber/"><img src="img/clients-boroda.png" alt="Barbershop Borodinski" width="209" height="90"></a>
 			</div>
 		</div>
@@ -149,10 +149,10 @@
 	<div class="map">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6198884762414!2d30.32160008426557!3d59.938449324695334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JEuINCa0L7QvdGO0YjQtdC90L3QsNGPLCDQtC4gMTkvOA!5e0!3m2!1sru!2sru!4v1478254137541" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
 		<div class="map__wrap">
-			<div class="form__feedback">
-				<span>Nёrds design studio Nёrds design studio Nёrds</span>
-				<a class="btn" href="tel:+78122757575">+7(812) 275-75-75</a>
-				<a class="btn  feedback" href="modal.html">Напишите нам</a>
+			<div class="form-feedback">
+				<span>Nёrds design studio</span>
+				<a class="btn  btn--feedback" href="tel:+78122757575">+7(812) 275-75-75</a>
+				<a class="btn  btn--feedback  feedback" href="modal.html">Напишите нам</a>
 			</div>
 		</div>
 	</div>
@@ -170,7 +170,7 @@
 				<label for="email">Ваше e-mail:</label>
 				<input type="text" id="email" name="email" placeholder="Для отправки ответа" required>
 			</div>
-			<div class="modal__user-block  test">
+			<div class="modal__user-block">
 				<label for="textarea">Текст письма:</label>
 				<textarea placeholder="В свободной форме" id="textarea" name="textarea" rows="7" required></textarea>
 			</div>
@@ -191,6 +191,7 @@
 			</div>
 		</div>
 	</footer>
-<script src="js/modal.js"></script>
+
+	<script src="js/modal.js"></script>
 </body>
 </html>
