--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
 				<label for="email">Ваше e-mail:</label>
 				<input type="text" id="email" name="email" placeholder="Для отправки ответа" required>
 			</div>
-			<div class="modal__user-block  test">
+			<div class="modal__user-block">
 				<label for="textarea">Текст письма:</label>
 				<textarea placeholder="В свободной форме" id="textarea" name="textarea" rows="7" required></textarea>
 			</div>
@@ -63,27 +63,29 @@
 		</form>
 	</div>
 
-	<div class="page-wrap">
+	<div class="shop">
 
-		<div class="filters">
+		<div class="shop__filter-wrap">
 			<form action="https://echo.htmlacademy.ru" method="get">
-				<span>Стоимость:</span>
-				<div class="filter__range">
-					<div class="filter__controls">
-					  <div class="filter__scale">
-							<div class="filter__bar" style="width: 70%"></div>
+
+				<div class="filter-range">
+					<span class="filter-range__title">Стоимость:</span>
+					<div class="filter-range__controls">
+					  <div class="filter-range__scale">
+							<div class="filter-range__bar" style="width: 70%"></div>
 					  </div>
-				  	<div class="filter__scale-toggle  filter__scale-toggle--min"></div>
-				  	<div class="filter__scale-toggle  filter__scale-toggle--max"></div>
+				  	<div class="filter-range__scale-toggle  filter-range__scale-toggle--min"></div>
+				  	<div class="filter-range__scale-toggle  filter-range__scale-toggle--max"></div>
 					</div>
-					<div class="filter__price">
+					<div class="filter-range__price">
         		<label class="min-price">от  <input name="min-price" type="text" value="0"></label>
         		<label class="max-price">до  <input name="max-price" type="text" value="15000"></label>
         	</div>
 				</div>
-				<fieldset>
+
+				<fieldset class="filter-radio">
 					<legend>Сетка:</legend>
-					<ul class="filters__radio">
+					<ul class="filter-radio__list">
 						<li>
 							<input id="adaptive" type="radio" value="adaptive" name="grid" checked disabled>
 							<label for="adaptive">Адаптивная</label>
@@ -98,9 +100,10 @@
 						</li>
 					</ul>
 				</fieldset>
-				<fieldset>
+
+				<fieldset class="filter-checkbox">
 					<legend>Особенности:</legend>
-					<ul class="filters__checkbox">
+					<ul class="filter-checkbox__list">
 						<li>
 							<input id="slider" type="checkbox" name="slider" checked disabled>
 							<label for="slider">Слайдер</label>
@@ -123,19 +126,20 @@
 						</li>
 					</ul>
 				</fieldset>
+
 				<input type="submit" class="btn  btn--submit" value="Показать">
 			</form>
 		</div>
 
-		<div class="shop">
+		<div class="shop__cards-wrap">
 
 			<div class="shop__sorting">
 				<span>Сортировать:</span>
-					<ul class="shop__sorting-list">
-						<li class="shop__sorting-item  shop__sorting-item--active"><a href="#">По цене</a></li>
-						<li class="shop__sorting-item"><a href="#">По типу</a></li>
-						<li class="shop__sorting-item"><a href="#">По функционалу</a></li>
-					</ul>
+				<ul class="shop__sorting-list">
+					<li class="shop__sorting-item  shop__sorting-item--active"><a href="#">По цене</a></li>
+					<li class="shop__sorting-item"><a href="#">По типу</a></li>
+					<li class="shop__sorting-item"><a href="#">По функционалу</a></li>
+				</ul>
 				<div class="shop__sorting-price">
 					<a href="#"><i class="icon-down-dir  sort-icon--active"></i></a>
 					<a href="#"><i class="icon-up-dir"></i></a>
@@ -143,86 +147,86 @@
 			</div>
 
 			<div class="shop__list">
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Aviator</h3>
 						<span>Одностраничный макет с авторским	 дизайном</span>
-						<a class="btn  btn--item-modal" href="#">8000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">8000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/aviator-item.jpg" alt="Aviator" width="240" height="240">
 					</div>
 				</div>
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Sunset</h3>
 						<span>Интернет-магазин с личным кабинетом</span>
-						<a class="btn  btn--item-modal" href="#">10000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">10000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/sunset-item.jpg" alt="Sunset" width="240" height="240">
 					</div>
 				</div>
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Forte</h3>
 						<span>Отличный макет для личного блога</span>
-						<a class="btn  btn--item-modal" href="#">5000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">5000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/forte-item.jpg" alt="Forte" width="240" height="240">
 					</div>
 				</div>
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Modern Organic THAI</h3>
 						<span>Сайт для ресторана быстрого питания</span>
-						<a class="btn  btn--item-modal" href="#">12000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">12000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/marquee-item.jpg" alt="Marquee" width="240" height="240">
 					</div>
 				</div>
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Avenue</h3>
 						<span>Макет для блога о путешествиях</span>
-						<a class="btn  btn--item-modal" href="#">8000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">8000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/avenue-item.jpg" alt="Avenue" width="240" height="240">
 					</div>
 				</div>
-				<div class="shop__item">
-					<div class="item-modal">
+				<div class="shop-item">
+					<div class="shop-item__modal">
 						<h3>Dovetail</h3>
 						<span>Интернет-магазин с галереей товаров</span>
-						<a class="btn  btn--item-modal" href="#">4000 Р.</a>
+						<a class="btn  btn--shop-item" href="#">4000 Р.</a>
 					</div>
-					<div class="shop__item-img">
+					<div class="shop-item__img">
 						<img src="img/dovetail-item.jpg" alt="Dovetail" width="240" height="240">
 					</div>
 				</div>
 			</div>
 
 			<div class="paginator">
-				<ul>
-					<li><a class="btn  btn--paginator  btn--paginator-active" href="#">1</a></li>
-					<li><a class="btn  btn--paginator" href="#">2</a></li>
-					<li><a class="btn  btn--paginator" href="#">3</a></li>
-					<li><a class="btn  btn--paginator" href="#">Следующая</a></li>
+				<ul class="paginator__list">
+					<li class="paginator__item  paginator__item--active"><a class="btn  btn--paginator" href="#">1</a></li>
+					<li class="paginator__item"><a class="btn  btn--paginator" href="#">2</a></li>
+					<li class="paginator__item"><a class="btn  btn--paginator" href="#">3</a></li>
+					<li class="paginator__item  paginator__item--next-page"><a class="btn  btn--paginator" href="#">Следующая</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6198884762414!2d30.32160008426557!3d59.938449324695334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JEuINCa0L7QvdGO0YjQtdC90L3QsNGPLCDQtC4gMTkvOA!5e0!3m2!1sru!2sru!4v1478254137541" width="100%" height="416"  style="border:0" allowfullscreen></iframe>
-		<div class="map__wrap"> <!-- ERROR W3C -->
-			<div class="form__feedback">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6198884762414!2d30.32160008426557!3d59.938449324695334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JEuINCa0L7QvdGO0YjQtdC90L3QsNGPLCDQtC4gMTkvOA!5e0!3m2!1sru!2sru!4v1478254137541" width="1200" height="416"  style="border:0" allowfullscreen></iframe>
+		<div class="map__wrap">
+			<div class="form-feedback">
 				<span>Nёrds design studio</span>
-				<a class="btn" href="tel:+78122757575">+7(812) 275-75-75</a>
-				<a class="btn  feedback" href="modal.html">Напишите нам</a>
+				<a class="btn  btn--feedback" href="tel:+78122757575">+7(812) 275-75-75</a>
+				<a class="btn  btn--feedback  feedback" href="modal.html">Напишите нам</a>
 			</div>
 		</div>
 	</div>
@@ -240,6 +244,8 @@
 			</div>
 		</div>
 	</footer>
-<script src="js/modal.js"></script>
+
+	<script src="js/modal.js"></script>
+
 </body>
 </html>
