--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Дизайн-студия Nerd's</title>
 	<meta name="description" content="Дизайн-студия Nerds">
 	<meta name="keywords" content="дизайн-студия, макеты, лендингы, сайты, мобильные приложения">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
 
