--- a/modal.html
+++ b/modal.html
@@ -5,7 +5,7 @@
   <title>Магазин Nerd's</title>
   <meta name="description" content="Магазин готовых макетов Nerds">
   <meta name="keywords" content="дизайн-студия, макеты, лендингы, сайты, мобильные приложения">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
 
